<?xml version="1.0"?>
<package format="2">
  <name>python_ros_server</name>
  <version>0.0.0</version>
  <description>The python_ros_server package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lucafortini60@gmail.com">Luca Fortini</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
      <architecture_independent/>
  </export>
</package>
